--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # Added by Akshay Anand
 
 #DATABASE CONFIG#
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/sportsplus
 spring.datasource.username=root
 spring.datasource.password=
