--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+  			<groupId>org.postgresql</groupId>
+  			<artifactId>postgresql</artifactId>
+  			<version>42.2.1</version>
+		</dependency>
 	</dependencies>
 	
 
