--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 spring.jpa.hibernate.ddl-auto=update
 #update doesnt let overwrite data like "create" does
-spring.datasource.url=jdbc:h2:file:./db
+spring.datasource.url=
 
 #spring.datasource.url=jdbc:h2:mem:sportsplus
 #;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
@@ -14,13 +14,12 @@ spring.datasource.url=jdbc:h2:file:./db
 # h2 - type of database
 # sportsplus - name of schema
 # "file" instead of mem makes the database persist
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/database
+
 
 # Configure the server to run on port 8080
 server.port=8080
