--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,11 @@ spring.datasource.url=
 # sportsplus - name of schema
 # "file" instead of mem makes the database persist
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.database-platform=
-spring.jpa.show-sql=true
-
+spring:
+  datasource:
+    url: ${JDBC_DATABASE_URL}
+    username: ${JDBC_DATABASE_USERNAME}
+    password: ${JDBC_DATABASE_PASSWORD}
 
 # Configure the server to run on port 8080
 server.port=8080
