--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,10 @@
-#DATABASE CONFIG#
-# Added by Akshay Anand
-
 
 spring.jpa.hibernate.ddl-auto=create
-#update doesnt let overwrite data like "create" does
-
-
-#spring.datasource.url=jdbc:h2:mem:sportsplus
-#;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-#use this when creating jar to prevent conflict with existing .db files
-
-# jdbc- connection
-# h2 - type of database
-# sportsplus - name of schema
-# "file" instead of mem makes the database persist
-spring.datasource.driverClassName=org.postgresql.Driver
-spring:
-  datasource:
-    url: ${JDBC_DATABASE_URL}
-    username: ${JDBC_DATABASE_USERNAME}
-    password: ${JDBC_DATABASE_PASSWORD}
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-# Configure the server to run on port 8080
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 
