--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,26 @@
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-#spring.jpa.show-sql=false
-#spring.jpa.generate-ddl=true
-#server.port=${PORT:8080}
+#DATABASE CONFIG#
+# Added by Akshay Anand
+
+
+spring.jpa.hibernate.ddl-auto=create
+#update doesnt let overwrite data like "create" does
+spring.datasource.url=jdbc:h2:file:./db
+
+#spring.datasource.url=jdbc:h2:mem:sportsplus
+#;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+#use this when creating jar to prevent conflict with existing .db files
+
+# jdbc- connection
+# h2 - type of database
+# sportsplus - name of schema
+# "file" instead of mem makes the database persist
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/database
+
+# Configure the server to run on port 8080
+server.port=8080
