--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+
 spring:
   datasource:
     url: ${JDBC_DATABASE_URL}
     username: ${JDBC_DATABASE_USERNAME}
     password: ${JDBC_DATABASE_PASSWORD}
-server.port=8080
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
